# mt5-docker

./: .env.example  .env.sample  .env.test  .env.test.example  .gitignore  Dockerfile  Makefile  README.md  config.env.template  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  versions.env
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
Metatrader/: health_monitor.sh  start.sh
Metatrader/etc/s6-overlay/s6-rc.d/svc-mt5server/: run
Metatrader/scripts/: 00_env.sh  05_config_unpack.sh  05_data_sync.sh  10_prefix_init.sh  20_winetricks.sh  30_mt5.sh  30_mt5_install.sh  31_mt5_config.sh  32_mt5_login.sh  34_config_unpack.sh  35_data_sync.sh  36_myfxbook.sh  40_python_wine.sh  50_python_linux.sh  60_server.sh  65_health_monitor.sh  70_myfxbook.sh
docker/: Dockerfile  compose.yaml  versions.env
docker/container/Metatrader/: __init__.py  bridge.py  health_monitor.sh  mt5_pb2.py  mt5_pb2_grpc.py  setup.sh  start.sh
docker/container/Metatrader/etc/s6-overlay/s6-rc.d/svc-mt5server/: run
docker/container/Metatrader/scripts/: 00_env.sh  10_prefix_init.sh  30_mt5.sh  50_copy_bridge.sh
docker/container/metatrader/: bridge.py  health_monitor.sh  mt5_pb2_grpc.py  open_demo_account.py  setup.sh  start.sh
docker/container/metatrader/etc/s6-overlay/s6-rc.d/svc-mt5server/: finish  run
root/etc/cont-init.d/: 01-cache-setup
scripts/: check-updates.sh  setup-dependencies.sh  test-container.sh
tests/: __init__.py  conftest.py  constants.py  markers.py  test_bridge_validation.py  test_build_upgrade.py  test_container.py  test_runtime.py  test_static.py
tests/fixtures/: __init__.py  docker-compose.test.yaml  docker-compose.yaml  docker.py
typings/: MetaTrader5.pyi
typings/dotenv/: __init__.pyi
typings/pytest/: __init__.pyi
