[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.mypy]
    exclude = ["typings/"]
    mypy_path = "typings"
    python_version = "3.12"
    strict = true
    warn_return_any = true
    warn_unused_configs = true

    [[tool.mypy.overrides]]
        disallow_untyped_calls = false
        disallow_untyped_defs = false
        disable_error_code = ["type-var", "call-arg", "operator"]
        module = "tests.*"

[tool.poetry]
    authors = ["marlonsc <marlonsc@gmail.com>"]
    description = "Dockerized MetaTrader 5 environment with RPyC bridge"
    license = "MIT"
    name = "mt5docker"
    package-mode = false
    readme = "README.md"
    version = "0.1.9"

    [tool.poetry.dependencies]
        python = ">=3.12"
        python-dotenv = "^1.0.0" # For loading .env files
        rpyc = "6.0.2"           # RPYC_VERSION in versions.env

    [tool.poetry.group.dev.dependencies]
        hypothesis = "^6.148.7"
        mypy = "^1.0.0"
        pyright = "^1.1.0"
        pytest = "^8.0.0"
        pytest-dotenv = "^0.5.0"
        pytest-timeout = "^2.0.0"
        ruff = "^0.8.0"

[tool.pyright]
    exclude = ["typings", ".venv"]
    pythonPlatform = "Linux"
    pythonVersion = "3.12"
    reportMissingImports = false
    reportMissingTypeStubs = false
    stubPath = "typings"
    typeCheckingMode = "strict"

[tool.pytest.ini_options]
    addopts = "-v --tb=short"
    env_files = [".env"]
    markers = [
        "requires_container: marks tests that require the Docker container to be running",
        "slow: marks tests that may take longer to execute",
    ]
    testpaths = ["tests"]
    timeout = 300

[tool.ruff]
    # bridge.py is bundled from mt5linux - external file, don't lint
    extend-exclude = ["typings", "docker/container/Metatrader/bridge.py"]
    line-length = 88
    target-version = "py312"

    [tool.ruff.lint]
        ignore = [
            "COM812",  # missing-trailing-comma (conflicts with formatter)
            "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
            "D203",    # incorrect-blank-line-before-class (incompatible with D211)
            "D213",    # multi-line-summary-second-line (incompatible with D212)
        ]
        select = ["ALL"]

    [tool.ruff.lint.per-file-ignores]
        "tests/*" = [
            "ANN401",   # Any ok for dynamic rpyc module access
            "PLR2004",  # magic values ok in tests
            "S101",     # assert ok in tests
            "S603",     # subprocess ok in tests
            "S607",     # partial path ok in tests
            "SLF001",   # private member access ok for rpyc internals
            "TC003",    # stdlib type imports in TYPE_CHECKING ok
        ]
