[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.mypy]
    exclude = [
        "*.pyi",
        "docker/container/Metatrader/mt5_pb2.py",
        "docker/container/Metatrader/mt5_pb2_grpc.py",
        "typings/",
    ]
    mypy_path = "typings"
    python_version = "3.12"
    strict = true


[tool.poetry]
    authors = ["marlonsc <marlonsc@gmail.com>"]
    description = "Dockerized MetaTrader 5 environment with gRPC bridge"
    license = "MIT"
    name = "mt5docker"
    package-mode = false
    readme = "README.md"
    version = "2.2.1"

    [tool.poetry.dependencies]
        grpcio = "^1.60.0"
        python = ">=3.12,<4"
        python-dotenv = "^1.0.0" # For loading .env files

    [tool.poetry.group.dev.dependencies]
        hypothesis = "^6.148.7"
        mypy = "^1.0.0"
        pyright = "^1.1.0"
        pytest = "^8.0.0"
        pytest-dotenv = "^0.5.0"
        pytest-timeout = "^2.0.0"
        ruff = "0.11.13"

[tool.pyrefly]
    exclude = [
        "*.pyi",
        "mt5linux/mt5_pb2.py",
        "mt5linux/mt5_pb2_grpc.py",
        "typings/",
    ]

[tool.pyright]
    exclude = [
        "*.pyi",
        "docker/container/Metatrader/mt5_pb2.py",
        "docker/container/Metatrader/mt5_pb2_grpc.py",
        "typings/",
    ]
    pythonPlatform = "Linux"
    pythonVersion = "3.12"
    stubPath = "typings"
    typeCheckingMode = "strict"
    typeStubSearchPaths = ["/typings"]

[tool.pytest.ini_options]
    addopts = "-v --tb=short -s"
    env_files = [".env"]
    markers = [
        "requires_container: marks tests that require the Docker container to be running",
        "slow: marks tests that may take longer to execute",
    ]
    testpaths = ["tests"]
    timeout = 600

[tool.ruff]

    line-length = 88
    target-version = "py312"

    [tool.ruff.lint]
        ignore = [
            "COM812",  # missing-trailing-comma (conflicts with formatter)
            "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
            "D203",    # incorrect-blank-line-before-class (incompatible with D211)
            "D213",    # multi-line-summary-second-line (incompatible with D212)
        ]
        exclude = [
            "*.pyi",
            "mt5linux/mt5_pb2.py",
            "mt5linux/mt5_pb2_grpc.py",
            "typings/",
        ]
        select = ["ALL"]


            [tool.ruff.lint.per-file-ignores]
                "tests/*" = [
                    "S101",    # assert ok in tests
                    "S603",    # subprocess calls ok in tests (Docker interaction)
                    "S607",    # partial executable path ok in tests (docker CLI)
                    "TRY300",  # try/except style ok in tests
                ]

[tool.uv.sources]
mt5linux = { path = "../mt5linux", editable = true }

[dependency-groups]
dev = [
    "mt5linux",
]
