[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["typings/"]
mypy_path = "typings"
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = ["MetaTrader5"]
ignore_missing_imports = true


[tool.poetry]
authors = ["marlonsc <marlonsc@gmail.com>"]
description = "Dockerized MetaTrader 5 environment with gRPC bridge"
license = "MIT"
name = "mt5docker"
package-mode = false
readme = "README.md"
version = "2.2.1"

[tool.poetry.dependencies]
grpcio = "^1.60.0"
mt5linux = { git = "https://github.com/marlonsc/mt5linux.git", branch = "master" }
python = ">=3.13,<3.14"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
grpc-stubs = ">=1.53.0.6,<2.0.0.0"
hypothesis = "^6.148.7"
mypy = "^1.0.0"
pyright = "^1.1.0"
pytest = "^9.0.2"
pytest-dotenv = "^0.5.0"
pytest-timeout = "^2.0.0"
ruff = "0.11.13"

[tool.pyrefly]
project-excludes = ["typings", "typings/**"]
replace-imports-with-any = ["mt5linux.mt5_pb2", "mt5linux.mt5_pb2_grpc"]
ignore-missing-imports = ["MetaTrader5"]
python-version = "3.13"

[tool.pyright]
exclude = ["**/mt5_pb2.py", "**/mt5_pb2_grpc.py", "typings/"]
pythonPlatform = "Linux"
pythonVersion = "3.13"
stubPath = "typings"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "-v --tb=short -s"
env_files = [".env"]
markers = [
    "requires_container: marks tests that require the Docker container to be running",
    "slow: marks tests that may take longer to execute",
]
testpaths = ["tests"]
timeout = 600

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
exclude = [
    "*.pyi",
    "docker/container/Metatrader/mt5_pb2.py",
    "docker/container/Metatrader/mt5_pb2_grpc.py",
    "typings/",
]
ignore = ["COM812", "ISC001", "D203", "D213", "N802"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert ok in tests
    "S603",   # subprocess calls ok in tests (Docker interaction)
    "S607",   # partial executable path ok in tests (docker CLI)
    "SLF001",
    "TRY300", # try/except style ok in tests
]
"docker/container/Metatrader/bridge.py" = [
    "ARG002",  # unused arguments are required by gRPC framework (request, context)
    "N802",    # function names must be PascalCase for gRPC service methods
    "PLW0603", # global statement needed for server lifecycle management
    "S104",    # binding to all interfaces is intentional for gRPC server
]
"tests/test_bridge_validation.py" = [
    "PT019",   # fixture without value injected as parameter - test setup requirement
    "S105",    # hardcoded password - test token for controlled testing
    "S108",    # hardcoded temp file - test token file in /tmp for restart tests
    "PT018",   # composite assertion - complex validation in single assertion
    "PLR2004", # magic value comparison - specific length validation in tests
]
